--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "jest-extended": "^2.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jest-sorted": "^1.0.14",
     "pg": "^8.7.3",
-    "supertest": "^6.2.2",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "supertest": "^6.2.2"
   },
   "jest": {
     "setupFilesAfterEnv": [
