--- a/package.json
+++ b/package.json
@@ -31,7 +31,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.3",
     "jest-sorted": "^1.0.14",
+    "nodemailer": "^6.7.5",
+    "passport": "^0.5.3",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "pg-format": "^1.0.4",
     "supertest": "^6.2.2"
