--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,10 @@
 PGDATABASE=database_name_here
+SESSION_SECRET=your_cookie_secret
+
+GOOGLE_CLIENT_ID="your_client_id"
+GOOGLE_CLIENT_SECRET="your_client_secret"
+GOOGLE_CALLBACK_URL="your_callback_url"
+
+facebook_APP_ID="your_client_id"
+facebook_APP_SECRET="your_client_secret"
+facebook_CALLBACK_URL="your_callback_url"
