--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest-extended": "^2.0.0"
   },
   "dependencies": {
+    "connect-pg-simple": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
