--- a/.env-example
+++ b/.env-example
@@ -5,6 +5,6 @@ GOOGLE_CLIENT_ID="your_client_id"
 GOOGLE_CLIENT_SECRET="your_client_secret"
 GOOGLE_CALLBACK_URL="your_callback_url"
 
-facebook_APP_ID="your_client_id"
-facebook_APP_SECRET="your_client_secret"
-facebook_CALLBACK_URL="your_callback_url"
+FACEBOOK_APP_ID="your_client_id"
+FACEBOOK_APP_SECRET="your_client_secret"
+FACEBOOK_CALLBACK_URL="your_callback_url"
