--- a/.env-example
+++ b/.env-example
@@ -9,4 +9,5 @@ FACEBOOK_APP_ID="your_client_id"
 FACEBOOK_APP_SECRET="your_client_secret"
 FACEBOOK_CALLBACK_URL="your_callback_url"
 
-EMAIL_PASS="a password"
+EMAIL_ADDRESS="an_email"
+EMAIL_PASS="a_password"
