add auth requirements to certain routes

--- a/.env_._example
+++ b/.env_._example
@@ -1,5 +1,5 @@
-PGDATABASE=database_name_here
-SESSION_SECRET=your_cookie_secret
+PGDATABASE=nc_news
+SESSION_SECRET=your_session_secret
 
 GOOGLE_CLIENT_ID="your_client_id"
 GOOGLE_CLIENT_SECRET="your_client_secret"
